src/objects/Log_MVN__c.object
<CustomObject>
    <description>Holds the log records for all REST API calls.</description>
    <fields>
        <fullName>Endpoint_MVN__c</fullName>
        <description>Holds the endpoint of the log</description>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code_MVN__c</fullName>
        <description>Holds the error code</description>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_MVN__c</fullName>
        <description>Holds the error message</description>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Payload_MVN__c</fullName>
        <description>Holds the payload of the request</description>
        <label>Request Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Payload_MVN__c</fullName>
        <description>Holds the response of the rest callout</description>
        <label>Response Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_MVN__c</fullName>
        <description>Holds the stack trace</description>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_MVN__c</fullName>
        <description>Holds the status of the log</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Endpoint_MVN__c</columns>
        <columns>Status_MVN__c</columns>
        <columns>Error_Code_MVN__c</columns>
        <columns>Message_MVN__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>